<resources>
    <string name="app_name">Famer Friend</string>
    <string name="signin_signin">Sign in</string>
    <string name="signin_quen">Send OTP</string>
    <string name="signin_capnhat">Update</string>
    <string name="signin_sdt">Phone number</string>
    <string name="signin_sdt_hint">Input phone number</string>
    <string name="signin_anwser">Have account?</string>
    <string name="signin_login">Log in</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_pass">Password</string>
    <string name="login_pass_hint">Input password</string>
    <string name="login_forget">Forget password?</string>
    <string name="login_create">Create account?</string>

    <string name="enter_otp">Input OTP code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="permission_send_otp">You need permission to send OTP!</string>
    <string name="sdt_error">Invalid phone number!</string>
    <string name="sdt_noexists">Phone number does not exist</string>
    <string name="opt_sent_success">OTP sent</string>
    <string name="otp_sent_failed">Sending OTP failed: </string>
    <string name="otp_you">Your OTP code is: </string>
    <string name="otp_new_resend">New OTP code has been sent!</string>
    <string name="otp_dont_new_resend">Unable to resend OTP: </string>
    <string name="otp_find_sdt">Phone number not found!</string>
    <string name="otp_input">Please enter the full OTP code</string>
    <string name="otp_success">OTP verification successful!</string>
    <string name="otp_failed">The OTP code is incorrect, please try again</string>
    <string name="dk_ten">Input name</string>

    <string name="dk_ten_null">Name cannot be blank</string>
    <string name="dk_mk_null">Password cannot be blank</string>
    <string name="dk_check_mk">Confirm password</string>
    <string name="dk_mk_khop">Passwords do not match</string>
    <string name="update_success">Update success</string>
    <string name="update_failed">Update failed. Try again later!</string>

    <string name="dk_loai">You is</string>
    <string name="dk_loai_le">Customers</string>
    <string name="dk_loai_doanh">Enterprise</string>
    <string name="dk_loai_nong">Farmer</string>
    <string name="sdt_exists">Phone number already exists!</string>
    <string name="signin_success">Sign up successful</string>
    <string name="signin_failed">Signup failed. Try again later!</string>

    <string name="login_success">Successful login</string>
    <string name="login_failed">Incorrect phone number or password</string>
    <string name="login_null">Please enter complete information</string>
    <string name="location_failed">Unable to get location, try again later</string>
    <string name="location_failed_mess">Error getting location: </string>
    <string name="location_failed_per">Please grant location permission to continue.</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="app_name_ud">Farmer Friend Application</string>
    <string name="tieu_de">Platform to support Vietnamese farmers</string>
    <string name="market">Farmers market</string>
    <string name="weather">Agricultural weather</string>
    <string name="news">News and events</string>
    <string name="forum">Farmers forum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>